--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,11 +80,14 @@ body {
   &__not-burger {
     @include flex(space-around);
     position: fixed;
+    top: 0;
+    right: 0;
     height: 70px;
     width: 100%;
     z-index: 5;
+    overflow: hidden;
     background-color: $color-white;
-    // border-bottom: 3px solid $color-main;
+    border-bottom: 3px solid $color-main;
   }
 
   &__lists {
@@ -104,32 +107,37 @@ body {
     line-height: 280%;
     color: $color-black;
     font-family: $font-family-title;
+  }
 
-    img {
-      height: 100%;
-      width: 100%;
-    }
+  img {
+    height: 100%;
+    width: 100%;
   }
 
   //burger 
   &__burger {
-    width: 10%;
-    height: 70px;
+    width: 70px;
+    // height: 70px;
     position: fixed;
+    top: 0;
     right: 0;
-    border: 1px solid $color-main;
-    border-top-left-radius: 50%;
-    border-bottom-right-radius: 50%;
+    // border: 1px solid $color-main;
+    // border-top-left-radius: 50%;
+    // border-bottom-right-radius: 50%;
+    // background-color: red;
     text-align: center;
     line-height: 70px;
     // padding: 10px 40px;
-    // background-color: rgba(0, 0, 0, .3);
+
     font-size: 1.5em;
-    display: none;
+    display: block;
     z-index: 5;
   }
-}
 
+  // &__burger--active {
+  // display: block;
+  // }
+}
 
 /* Slider */
 
@@ -245,39 +253,48 @@ body {
     width: 80%;
     padding: 0 20px;
     margin: 0 auto;
-    transition: .5s;
   }
 
   &__name {
     @include flex(space-between);
     align-items: center;
-    padding: 5px 100px 5px 40px;
+    margin: 5px 100px 5px 40px;
+    transition: .2s;
   }
 
   &__text {
     font-size: 1.5rem;
-    padding: 20px 0;
+    margin: 10px 0;
+    padding: 0 20px;
     text-transform: uppercase;
     letter-spacing: 2px;
     cursor: pointer;
     line-height: 150%;
+    transition: all .2s linear;
+
+    &:hover {
+      margin-left: 20px;
+    }
   }
 
   /* kiedy dodanie zostanie klasa addLine dodać after */
-  .addLine .offer__text:after {
-    content: "";
-    display: block;
-    clear: both;
-    height: 2px;
-    width: 90%;
-    background: #c2000b;
-    text-align: center;
-    transition: 1s;
+  .addLine {
+    // border-bottom: 2px solid $color-main;
+    background-color: grey;
+    // border-radius: 5px;
+    color: $color-white;
+    font-size: 3rem;
+  }
+
+  .addLine:hover .offer__text {
+    margin-left: 0px;
   }
 
   &__show {
     font-size: 3rem;
     cursor: pointer;
+    padding-right: 20px;
+    //  transform: scale(2);
   }
 
   &__treatment {
@@ -298,9 +315,6 @@ body {
     display: block;
   }
 
-  &__treatments .offer__show--rotate {
-    transform: rotate(45deg);
-  }
 
   &__not-found {
     text-align: center;
@@ -331,14 +345,21 @@ body {
     background-color: #ddd;
   }
 
-  &__IPL .offer__name {
+  &__epil-name {
     @include flex(space-between);
-    width: 70%;
+    align-items: center;
+    margin: 5px 100px 5px 40px;
+    transition: .2s;
+  }
+
+  &__ipl .offer__ipl-name {
+    @include flex(space-between);
+    width: 85%;
     // border-bottom: 1px solid grey;
     margin: 0 auto;
   }
 
-  &__IPL .offer__name:nth-child(odd) {
+  &__ipl .offer__ipl-name:nth-child(odd) {
     // border-bottom: 1px solid grey;
     background-color: #ddd;
   }
@@ -638,11 +659,19 @@ body {
 
   // menu w hamburgerze
   .menu {
+    border: none;
+
     &__not-burger {
       display: none;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, .7);
+      // background-color: rgba(255, 255, 255, .7);
+      background-color: rgba(128, 128, 128, .9);
+    }
+
+    &__not-burger--active {
+      display: block;
+      border-bottom: none;
     }
 
     &__lists {
